<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.hys</groupId>
    <artifactId>boot-demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
  <groupId>com.hys</groupId>
  <artifactId>boot-provider</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>boot-provider</name>
  <url>http://maven.apache.org</url>
  <packaging>war</packaging> 
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>  
    <com.alibaba.dubbo.version>2.8.1</com.alibaba.dubbo.version>
    <org.apache.zookeeper.version>3.4.5</org.apache.zookeeper.version>
    <com.github.sgroschupf.zkclient.version>0.1</com.github.sgroschupf.zkclient.version>
  </properties>
  <dependencies>
  	<dependency>
		    <groupId>com.hys</groupId>
		    <artifactId>boot-api</artifactId>
		    <version>0.0.1-SNAPSHOT</version>
    </dependency>    
        <dependency>  
            <groupId>org.springframework.boot</groupId>  
            <artifactId>spring-boot-starter-web</artifactId>  
        </dependency>
        <!-- <dependency>  
            <groupId>org.springframework.boot</groupId>  
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>  
            <scope>runtime</scope>  
        </dependency>  --> 
        <dependency>  
            <groupId>org.springframework.boot</groupId>  
            <artifactId>spring-boot-starter-tomcat</artifactId>  
            <scope>provided</scope>  
        </dependency>  
        <dependency>  
            <groupId>org.springframework.boot</groupId>  
            <artifactId>spring-boot-starter-test</artifactId>  
            <scope>test</scope>  
        </dependency>  
        <dependency>  
            <groupId>javax.servlet</groupId>  
            <artifactId>jstl</artifactId>  
        </dependency>  
        <dependency>  
            <groupId>org.apache.tomcat.embed</groupId>  
            <artifactId>tomcat-embed-jasper</artifactId>  
            <scope>provided</scope>
        </dependency>            
        <dependency>  
            <groupId>org.webjars</groupId>  
            <artifactId>jquery</artifactId>  
            <version>2.1.4</version>  
        </dependency>
        
        <dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-joda</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-parameter-names</artifactId>
		</dependency>

		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.25</version>
		</dependency>

		<!--mybatis -->
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>1.2.0</version>
		</dependency>
		<!--mapper -->
		<dependency>
			<groupId>tk.mybatis</groupId>
			<artifactId>mapper-spring-boot-starter</artifactId>
			<version>1.1.1</version>
		</dependency>
		<!--pagehelper -->
		<dependency>
			<groupId>com.github.pagehelper</groupId>
			<artifactId>pagehelper-spring-boot-starter</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency> -->		
        <!-- redis -->  
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-redis</artifactId>
		    <version>1.4.7.RELEASE</version>
		</dependency>
		<!-- dubbo begin -->
		<dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>dubbo</artifactId>
            <version>${com.alibaba.dubbo.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>spring</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                
                <exclusion>
                    <artifactId>spring-beans</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-expression</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>commons-logging</artifactId>
                    <groupId>commons-logging</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>aopalliance</artifactId>
                    <groupId>aopalliance</groupId>
                </exclusion>                
                <!--<exclusion>
                    <artifactId>log4j</artifactId>
                    <groupId>log4j</groupId>
                </exclusion>-->
                <!-- <exclusion>
                    <artifactId>javassist</artifactId>
                    <groupId>org.javassist</groupId>
                </exclusion> -->
                <!-- <exclusion>
                    <artifactId>kryo</artifactId>
                    <groupId>com.esotericsoftware.kryo</groupId>
                </exclusion> -->
                <exclusion>
                    <artifactId>minlog</artifactId>
                    <groupId>com.esotericsoftware.minlog</groupId>
                </exclusion>
                <!-- <exclusion>
                    <artifactId>kryo-serializers</artifactId>
                    <groupId>de.javakaffee</groupId>
                </exclusion> -->
                <exclusion><artifactId>fst</artifactId><groupId>de.ruedigermoeller</groupId></exclusion>
				<exclusion><artifactId>commons-pool</artifactId><groupId>commons-pool</groupId></exclusion>
				<exclusion><artifactId>resteasy-jaxrs</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>jaxrs-api</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>jboss-annotations-api_1.1_spec</artifactId><groupId>org.jboss.spec.javax.annotation</groupId></exclusion>
				<exclusion><artifactId>activation</artifactId><groupId>javax.activation</groupId></exclusion>
				<exclusion><artifactId>httpclient</artifactId><groupId>org.apache.httpcomponents</groupId></exclusion>
				<exclusion><artifactId>httpcore</artifactId><groupId>org.apache.httpcomponents</groupId></exclusion>
				<exclusion><artifactId>commons-codec</artifactId><groupId>commons-codec</groupId></exclusion>
				<exclusion><artifactId>commons-io</artifactId><groupId>commons-io</groupId></exclusion>
				<exclusion><artifactId>jcip-annotations</artifactId><groupId>net.jcip</groupId></exclusion>
				<exclusion><artifactId>resteasy-jdk-http</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>resteasy-undertow</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>resteasy-client</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>async-http-servlet-3.0</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>undertow-servlet</artifactId><groupId>io.undertow</groupId></exclusion>
				<exclusion><artifactId>jboss-annotations-api_1.2_spec</artifactId><groupId>org.jboss.spec.javax.annotation</groupId></exclusion>
				<exclusion><artifactId>undertow-core</artifactId><groupId>io.undertow</groupId></exclusion>
				<exclusion><artifactId>jboss-logging</artifactId><groupId>org.jboss.logging</groupId></exclusion>
				<exclusion><artifactId>xnio-api</artifactId><groupId>org.jboss.xnio</groupId></exclusion>
				<exclusion><artifactId>xnio-nio</artifactId><groupId>org.jboss.xnio</groupId></exclusion>
				<exclusion><artifactId>resteasy-jackson-provider</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>jackson-core-asl</artifactId><groupId>org.codehaus.jackson</groupId></exclusion>
				<exclusion><artifactId>jackson-mapper-asl</artifactId><groupId>org.codehaus.jackson</groupId></exclusion>
				<exclusion><artifactId>jackson-jaxrs</artifactId><groupId>org.codehaus.jackson</groupId></exclusion>
				<exclusion><artifactId>jackson-xc</artifactId><groupId>org.codehaus.jackson</groupId></exclusion>
				<exclusion><artifactId>resteasy-jaxb-provider</artifactId><groupId>org.jboss.resteasy</groupId></exclusion>
				<exclusion><artifactId>jaxb-impl</artifactId><groupId>com.sun.xml.bind</groupId></exclusion>
				<exclusion><artifactId>jaxb-core</artifactId><groupId>com.sun.xml.bind</groupId></exclusion>
				<exclusion><artifactId>jaxb-api</artifactId><groupId>javax.xml.bind</groupId></exclusion>
				<exclusion><artifactId>istack-commons-runtime</artifactId><groupId>com.sun.istack</groupId></exclusion>
				<exclusion><artifactId>FastInfoset</artifactId><groupId>com.sun.xml.fastinfoset</groupId></exclusion>
				<exclusion><artifactId>jsr173_api</artifactId><groupId>javax.xml.bind</groupId></exclusion>
				<exclusion><artifactId>curator-framework</artifactId><groupId>org.apache.curator</groupId></exclusion>
				<exclusion><artifactId>curator-client</artifactId><groupId>org.apache.curator</groupId></exclusion>
				<exclusion><artifactId>slf4j-api</artifactId><groupId>org.slf4j</groupId></exclusion>
				<exclusion><artifactId>guava</artifactId><groupId>com.google.guava</groupId></exclusion>
				<exclusion><artifactId>objenesis</artifactId><groupId>org.objenesis</groupId></exclusion>                                
                <exclusion>
                    <artifactId>netty</artifactId>
                    <groupId>org.jboss.netty</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>javax.servlet-api</artifactId>
                    <groupId>javax.servlet</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jboss-servlet-api_3.1_spec</artifactId>
                    <groupId>org.jboss.spec.javax.servlet</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>netty</artifactId>
                    <groupId>io.netty</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>tomcat-embed-core</artifactId>
                    <groupId>org.apache.tomcat.embed</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>tomcat-embed-logging-juli</artifactId>
                    <groupId>org.apache.tomcat.embed</groupId>
                </exclusion>
            </exclusions>
		  </dependency>
		       <dependency>
		            <groupId>org.apache.zookeeper</groupId>
		            <artifactId>zookeeper</artifactId>
		            <version>${org.apache.zookeeper.version}</version>
		            <exclusions>
		                <exclusion>
		                    <groupId>org.jboss.netty</groupId>
		                    <artifactId>netty</artifactId>
		                </exclusion>
	            </exclusions>
	        </dependency>
	        <dependency>  
	            <groupId>com.github.sgroschupf</groupId>  
	            <artifactId>zkclient</artifactId>  
	            <version>${com.github.sgroschupf.zkclient.version}</version>  
	        </dependency>
	        <dependency>
			    <groupId>org.jboss.resteasy</groupId>
			    <artifactId>resteasy-netty</artifactId>
			    <version>3.0.7.Final</version>
			</dependency>
		<!-- dubbo end -->
  </dependencies>
  <build>  
        <plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>org.springframework</groupId>
						<artifactId>springloaded</artifactId>
						<version>1.2.5.RELEASE</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.mybatis.generator</groupId>
				<artifactId>mybatis-generator-maven-plugin</artifactId>
				<version>1.3.2</version>
				<configuration>
					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
					<overwrite>true</overwrite>
					<verbose>true</verbose>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>mysql</groupId>
						<artifactId>mysql-connector-java</artifactId>
						<version>${mysql.version}</version>
					</dependency>
					<dependency>
						<groupId>tk.mybatis</groupId>
						<artifactId>mapper</artifactId>
						<version>3.4.0</version>
					</dependency>										 
				</dependencies>
			</plugin>
			<plugin>  
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                  <url>http://localhost:9080/manager</url>                 
                  <path>/demo</path>
                  <port>9080</port>                  
                  <server>tomcat</server>
                  <systemProperties>  
                        <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>  
                  </systemProperties>
                </configuration>         
	      </plugin>	      
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-compiler-plugin</artifactId>        
	        <configuration>
	          <source>${java.version}</source>
	          <target>${java.version}</target>
	            <encoding>${project.build.sourceEncoding}</encoding>
	        </configuration>
	      </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-resources-plugin</artifactId>
	            <version>2.4.3</version>
	            <configuration>
	                <encoding>${project.build.sourceEncoding}</encoding>
	            </configuration>
	        </plugin>
		</plugins>  
    </build>
</project>
